--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,4 @@
   Below, you can see an example of a class called "menu" that changes the color of the text to blue. Modify according to your needs.
 */
 
-.menu {
-  color: blue;
-}
+/*I moved my css into MenuItem.css*/
