--- a/src/components/MenuItem.css
+++ b/src/components/MenuItem.css
@@ -9,7 +9,7 @@
 }
 
 .menu-grid-row{
-    margin: 20px 20px 20px 40px;
+    margin: 20px 20px 0px 40px;
 }
 
 .menu-item{
@@ -34,6 +34,9 @@
     color: #174d02;
     font-size: 12px;
     background-color: #ebf5eb;
+    padding: 0;
+    width: 25px;
+    height: 25px;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
 }
 
@@ -44,4 +47,8 @@
 
 .menu-item-desc-margin-bottom{
     margin-bottom: 6px;
+}
+
+.count{
+    padding: 0px 6px;
 }
