home kinda working

--- a/src/components/CityCard.css
+++ b/src/components/CityCard.css
@@ -1,56 +1,20 @@
-.menu-body {
-    color: #174d02;
-}
-
-.img-fill-container{
-    object-fit: cover;
-    max-width: 90%;
-    max-height: 90%;
-}
-
-.menu-grid-row{
-    margin: 15px 20px 0px 40px;
-}
-
-.menu-item{
-    font-size: 18px;
-    font-weight: 500;
-}
-
-.menu-item-description{
+.city-card {
+    background-color: #f0f0f0;
+    border-radius: 10px;
+    padding: 10px;
+    width: 200px;
+    margin-bottom: 10px; /* Add margin-bottom to create space between each card */
+  }
+   .city-name {
+    font-size: 16px;
+    font-weight: bold;
+  }
+   .temp {
+    font-size: 24px;
+    margin-top: 10px;
+  }
+   .high-low {
     font-size: 14px;
-    font-weight: 350;
-}
-
-.margin-bottom{
-    margin-bottom: 50px;
-}
-
-.btn-right-align{
-    text-align: right;
-}
-
-.btn-bg{
-    color: #174d02;
-    background-color: #ebf5eb;
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
-}
-
-.btn-bg:hover{
-    color: #ebf5eb;
-    background-color: #174d02;
-}
-
-.add-remove-btn{
-    font-size: 10px;
-    width: 20px;
-    height: 20px;
-}
-
-.menu-item-desc-margin-bottom{
-    margin-bottom: 6px;
-}
-
-.count{
-    padding: 0px 6px;
-}
+    margin-top: 10px;
+  }
+ 
