--- a/src/components/CityCard.css
+++ b/src/components/CityCard.css
@@ -1,9 +1,22 @@
 .city-card {
-    background-color: #f0f0f0;
     border-radius: 10px;
     padding: 10px;
-    width: 200px;
     margin-bottom: 10px; /* Add margin-bottom to create space between each card */
-  }
+    background-color: rgba(255, 255, 255, 0.396)
+}
 
+.card-title-1 {
+    font-size: 20px;
+    font-weight: bold;
+    color: #333333; /* Dark text color */
+}
+
+.card-text-1 {
+    font-size: 16px;
+    color: #666666; /* Medium-dark text color */
+}
+
+.selected{
+    background-color: rgb(255, 255, 255)
+}
  
